src/main/java/com/example/morsedecoder/errors/ErrorType.java
/**
 * 
 */
package com.example.morsedecoder.errors;

/**
 *
 *  Enumerator for types of errors within the application
 * @author Thiago
 *
 */
public enum ErrorType {

	/** General Error  */
	GENERAL_ERROR,
	/**  System Error  */
	SYSTEM_ERROR,
	/** Business Error */
	BUSINESS_ERROR;
}
